config.apukirjasto.lueKomentorivi: lueKomentorivi.js Error [ERR_UNSUPPORTED_ESM_URL_SCHEME]: Only URLs with a scheme in: file, data, and node are supported by the default ESM loader. On Windows, absolute paths must be valid file:// URLs. Received protocol 'c:'

--- a/datapalvelin/config.json
+++ b/datapalvelin/config.json
@@ -1,12 +1,27 @@
 {
     "apukirjasto": {
         "kansio": "apukirjasto",
-        "luekomentorivi": "luekomentorivi.js",
+        "lueKomentorivi": "lueKomentorivi.js",
         "muodostaPolut": "muodostaPolut.js",
         "muodostaKirjastot": "muodostaKirjastot.js"
     },
     "palvelinkirjasto": {
         "kansio": "palvelinkirjasto",
         "palvelinfunktio": "palvelin.js"
+    },
+    "datakerros":{
+        "kansio": "datakerros",
+        "tietovarastokerros": "tietovarastokerros.js",
+        "varastokerros": "varastokerros.js"
+    },
+    "varastokirjasto": {
+        "kansio": "varastokirjasto",
+        "datasovitin": "varasto.js",
+        "lukijaKirjoittaja": "lukijaKirjoittaja.js",
+        "kuvatyypit": "mimetyypit.json"
+    },
+    "varastot": {
+        "kansio": "varastot",
+        "asetustiedostotkansio":"asetustiedostot"
     }
 }
